# backend/internal/handler/v1/dto.go
@@ -51,7 +51,16 @@ type SchoolPeriodDTO struct {
 type CreateEducationRequest struct {
 	MainSchool    SchoolPeriodDTO   `json:"main_school"`
 	SchoolPeriods []SchoolPeriodDTO `json:"school_periods,omitempty"`
-	Level         string            `json:"level"`
+	Level         string            `json:"level" example:"elementary"`
+}
+
+type UpdateEducationRequest struct {
+	Id            string            `json:"id"`
+	MainSchool    SchoolPeriodDTO   `json:"main_school"`
+	SchoolPeriods []SchoolPeriodDTO `json:"school_periods,omitempty"`
+	Level         string            `json:"level" example:"elementary"`
+	CreatedAt     time.Time         `json:"created_at"`
+	UpdatedAt     time.Time         `json:"updated_at"`
 }
 
 type EducationDTO struct {
